--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
+    "class-validator": "^0.14.0",
+    "crypto": "^1.0.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "firebase": "^10.2.0",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
