--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.2.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
