--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.17.2",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/uuid": "^9.0.5",
+    "antd": "^5.10.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
     "class-validator": "^0.14.0",
