--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.7",
     "@types/uuid": "^9.0.5",
     "antd": "^5.10.1",
+    "antd-img-crop": "^4.21.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
     "class-validator": "^0.14.0",
