--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next": "13.4.12",
     "npm": "^10.6.0",
     "postcss": "8.4.27",
+    "rc-virtual-list": "^3.11.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
