--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3"
+    "@types/js-cookie": "^3.0.3",
+    "@types/lodash": "^4.17.4"
   }
 }
